# fractaltext-haskell

./: .ghci  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  flake.nix  fractaltext.cabal
src/Data/: FractalText.hs
src/Data/FractalText/: Annotate.hs  Decode.hs  Encode.hs  From.hs  Parse.hs  Serialize.hs  To.hs  Type.hs  Util.hs
src/Streaming/: Parse.hs
test/: Json.hs  Property.hs
