cabal-version:      3.8
name:               fractaltext
version:            0.1.0
synopsis:           Reference implementation of FractalText
description:
    Reference implementation of FractalText parser and serializer.
category:           Data
license:            Apache-2.0
license-file:       LICENSE
copyright:          (c) 2025 0y2k
author:             0y2k <0x0y2k@gmail.com>
maintainer:         0y2k <0x0y2k@gmail.com>
build-type:         Simple
extra-doc-files:
    CHANGELOG.md,
    README.md,
    vendor/github.com/0y2k/fractaltext-test/README.md,
extra-source-files:
    vendor/github.com/0y2k/fractaltext-test/load/**/load_in.ft
    vendor/github.com/0y2k/fractaltext-test/load/**/load_out.json
    vendor/github.com/0y2k/fractaltext-test/load/**/load_err.json

common depends
    build-depends:
        base >=4.17 && <4.22,
        containers >=0.6.5 && <0.8,
        microlens-platform >=0.4.3.1 && <0.5,
        streaming >=0.2 && <0.3,
        text >=2.0 && <2.2,
        text-short >=0.1 && <0.2,
        vector >=0.13 && <0.14,

common warnings
    ghc-options: -Wall

library
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        free >=3.2 && <5.3,
        generic-data >=1.1 && <1.2,
        transformers >=0.6 && <0.7,
    exposed-modules:
        Data.FractalText,
        Data.FractalText.Annotate,
        Data.FractalText.From,
        Data.FractalText.Parse,
        Data.FractalText.Serialize,
        Data.FractalText.To,
        Data.FractalText.Type,
        Data.FractalText.Util,
    other-modules:
        Streaming.Parse,

test-suite fractaltext-test
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-tool-depends:
        tasty-discover:tasty-discover
    build-depends:
        fractaltext,
        directory,
        filepath,
        hedgehog,
        json,
        tasty,
        tasty-hedgehog,
        tasty-hunit,
    other-modules:
        Json,
        Property,
